--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Meal Search</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
       <a class="navbar-brand" href="#">Meal Search</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,12 +32,32 @@
   </header>
   
   <main class="container mt-5">
-    
+    <div class="form-group">
+      <input type="text" id="searchInput" class="form-control" placeholder="Search for a meal...">
+      <button id="searchButton" class="btn btn-primary mt-2">Search</button>
+    </div>
+    <div id="mealResults" class="row"></div>
+    <button id="showAllButton" class="btn btn-primary mt-2" style="display: none;">Show All</button>
   </main>
   
   <footer class="mt-5 bg-dark text-white text-center py-3">
     <p>&copy; Meal Search App</p>
   </footer>
+
+  <script>
+    const searchInput = document.getElementById('searchInput');
+    const searchButton = document.getElementById('searchButton');
+    const mealResults = document.getElementById('mealResults');
+    const showAllButton = document.getElementById('showAllButton');
+
+    searchButton.addEventListener('click', () => {
+      const searchText = searchInput.value.trim();
+      if (searchText !== '') {
+        fetchMeals(searchText);
+      }
+    });
+
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
