--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <title>Meal Search</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">Meal Search</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,11 +33,14 @@
   <main class="container mt-5">
     <div class="form-group">
       <input type="text" id="searchInput" class="form-control" placeholder="Search for a meal...">
+    </div>
+    <div class="text-center">
       <button id="searchButton" class="btn btn-primary mt-2">Search</button>
     </div>
     <div id="mealResults" class="row"></div>
     <button id="showAllButton" class="btn btn-primary mt-2" style="display: none;">Show All</button>
   </main>
+  
   
   <footer class="mt-5 bg-dark text-white text-center py-3">
     <p>&copy; Meal Search App</p>
@@ -56,6 +58,62 @@
         fetchMeals(searchText);
       }
     });
+
+    async function fetchMeals(searchText) {
+      mealResults.innerHTML = ''; 
+      try {
+        const response = await fetch(`https://www.themealdb.com/api/json/v1/1/search.php?s=${searchText}`);
+        const data = await response.json();
+        const meals = data.meals.slice(0, 5); 
+        meals.forEach(meal => {
+          const mealDiv = document.createElement('div');
+          mealDiv.classList.add('col-md-4', 'mb-4');
+          mealDiv.innerHTML = `
+            <div class="card">
+              <img src="${meal.strMealThumb}" class="card-img-top" alt="${meal.strMeal}">
+              <div class="card-body">
+                <h5 class="card-title">${meal.strMeal}</h5>
+                <p class="card-text">Meal ID: ${meal.idMeal}</p>
+                <p class="card-text">Meal Title: ${meal.strMeal}</p>
+                <p class="card-text"><strong>Instructions:</strong></p>
+                <p class="card-text">${meal.strInstructions.replace(/\r?\n/g, '<br>')}</p>
+              </div>
+            </div>
+          `;
+          mealResults.appendChild(mealDiv);
+        });
+        if (data.meals.length > 5) {
+          showAllButton.style.display = 'block';
+          showAllButton.addEventListener('click', () => {
+            displayAllMeals(data.meals.slice(5));
+          });
+        } else {
+          showAllButton.style.display = 'none';
+        }
+      } catch (error) {
+        console.error('Error fetching meals:', error);
+      }
+    }
+    function displayAllMeals(meals) {
+  meals.forEach(meal => {
+    const mealDiv = document.createElement('div');
+    mealDiv.classList.add('col-md-4', 'mb-4');
+    mealDiv.innerHTML = `
+      <div class="card">
+        <img src="${meal.strMealThumb}" class="card-img-top" alt="${meal.strMeal}">
+        <div class="card-body">
+          <h5 class="card-title">${meal.strMeal}</h5>
+          <p class="card-text">Meal ID: ${meal.idMeal}</p>
+          <p class="card-text">Meal Title: ${meal.strMeal}</p>
+          <p class="card-text"><strong>Instructions:</strong></p>
+          <p class="card-text">${meal.strInstructions.replace(/\r?\n/g, '<br>')}</p>
+        </div>
+      </div>
+    `;
+    mealResults.appendChild(mealDiv);
+  });
+  showAllButton.style.display = 'none';
+}
 
   </script>
 
